--- a/construction.css
+++ b/construction.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    12/04/2021
-Author:    Themewiz
+Last change:    08/09/2021
+Author:    creativemaze
 Primary use:    Construction
 -------------------------------------------------------------------*/
 
@@ -137,6 +137,10 @@ nav.navbar .navbar-brand img.logo{
    max-width: 200px;
    height: auto;
    display: block;
+}
+
+.navbar-header a.navbar-brand:hover{
+	color: #111111;
 }
 
 nav.navbar.bootsnav{
@@ -525,15 +529,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .prev_button,
 .next_button{
 	width: auto;
-	font-size: 18px;
+	font-size: 14px;
 	transition: 0.6s ease;
 	border-radius: 0 3px 3px 0;
 	background: transparent;
 	display: block;
-	padding: 10px 20px;
+	padding: 10px 16px;
 	color: #ffc91a;
 	cursor: pointer;
 	border: solid 1px #ffffff;
+	border-radius: 3px;
 }
 
 .prev_button:hover,
@@ -580,14 +585,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .first_left{
 	position: relative;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
 }
 
 .square_area{
 	max-width: 500px;
-	margin: auto;
 }
 
 .square_area h2{
@@ -700,7 +704,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .tool_col_area{
 	max-width: 500px;
-	margin: auto;
+	padding-left: 25px;
 }
 
 .tool_col_area h2{
@@ -752,7 +756,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 0 9em;
 	min-height: 400px;
 	padding: 6em 25px;
-	background-color: #f7f7f7;
+	background-color: #eeeeee;
 }
 
 .construct_group_three{
@@ -795,25 +799,17 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .grid_area{
 	overflow: hidden;
 	position: relative;
-	padding-bottom: 5px;
-	padding-right: 0;
-	padding-top: 0;
-	padding-left: 0;
+	padding-bottom: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-left: 10px;
 	background-color: #ffffff;
 	transition: ease-in-out 0.5s;
 }
 
-.grid_image > a > img{
-	transition: ease-in-out 3.25s;
-}
-
-.grid_image > a > img:hover{
-	transform: scale(1.15);
-}
-
 .grid_info{
 	background-color: #1a2980;
-	width: calc(100% - 10px);
+	width: 100%;
 	margin: auto;
 	text-align: center;
 }
@@ -830,7 +826,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	line-height: 1.4em;
 	padding: 12px 0;
 	margin: 0;
-	margin-top: 5px;
+	margin-top: 10px;
 }
 
 .grid_info h3::before{
@@ -864,7 +860,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	padding: 35px 30px; 
 	text-align: left;
-	background: #f7f7f7;
+	background: #f6f6f6;
 	transition: 0.5s;
 	min-height: 50px;
 	height: 100%
@@ -916,7 +912,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .icon_crumb{
-	width: auto;
+	max-width: 300px;
 	height: 1px;
 	display: block;
 	border-bottom: solid 4px #ffc91a;
@@ -971,16 +967,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-.featured_area{
-	overflow: hidden;
-	position: relative;
-	padding-bottom: 10px;
-	padding-right: 0;
-	padding-top: 0;
-	padding-left: 0;
-	background-color: #f7f7f7;
-}
-
 .featured_image > a > img{
 	transition: ease-in-out 3.25s;
 }
@@ -990,14 +976,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .featured_content{
-	background-color: #ffc91a;
-	width: calc(100% - 60px);
-	margin: auto;
-	text-align: center;
-	transition: ease-in-out 3.25s;
-	margin-top: -30px;
-	position: relative;
-	padding: 5px 0;
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	margin-bottom: 20px;
+	min-width: 230px;
+	padding: 20px 5px;
+	background-color: #ffffff;
 }
 
 .featured_content h3{
@@ -1010,20 +996,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.4em;
-	padding: 12px 0;
-	margin: 0 auto;
-	background-color: #ffffff;
-	width: calc(100% - 10px);
+	margin: 0;
 }
 
 .featured_content h3::before{
 	content: '\2014';
-	padding-right: 5px;
-	color: #1a2980;
-}
-
-.featured_content:hover{
-	background-color: #ffffff;
+	padding-right: 8px;
+	color: #ffc91a;
 }
 
 /* --- 3.6. Construction Area Six --- */
@@ -1056,148 +1035,21 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .construct_group_six{
 	position: relative;
-	z-index: 5;
-	max-width: 900px;
-	margin: auto;
-	padding: 0 25px;
+	z-index: 9;
 	width: 100%;
-}
-
-.bg_head{
-	color: #ffffff;
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	display: block;
-	text-align: center;
-	letter-spacing: 1px;
-	line-height: 1.3em;
-	margin-top: 0;
-}
-
-.bg_col_button a{
-	background-color: #ffc91a;
-	width: 210px;
-	min-height: 30px;
-	margin: 30px auto 0;	
-    border: none;
-    color: #1a2980;
-    padding: 14px 18px;
-    text-decoration: none;
-    display: block;
-    font-size: 15px;
-	font-weight: 600;
-	text-transform: uppercase;
-	font-family: 'Montserrat', Arial, sans-serif;
-    transition: 0.5s;
-    cursor: pointer;
-	border: 1px solid #ffc91a;
-	letter-spacing: 1px;
-	text-align: center;
-}
-
-.bg_col_button a:hover{
-	color: #ffffff;
-	background-color: #1a2980;
-	border-color: #1a2980;
-}
-
-/* --- 3.7. Construction Area Seven --- */
-.construct_area_seven{
 	max-width: 1400px;
-	padding: 0 25px;
-	margin: 0 auto 9em;
-}
-
-.construct_group_seven{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.construct_wide_col{
-	flex: 33.33%;
-	width: 33.33%;
-	padding: 0 15px;
-	position: relative;
-}
-
-.construct_box_col{
-	flex: 66.66%;
-	width: 66.66%;
-	padding: 0 15px;
-	position: relative;
-}
-
-.wide_area{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	overflow: hidden;
-}
-
-.wide_box{
-	max-width: 500px;
-	margin: 0 auto;
-}
-
-.wide_box h2{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	display: block;
-	color: #1a2980;
-	text-align: left;
-	letter-spacing: 1px;
-	line-height: 1.3em;
-}
-
-.wide_box p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: left;
-	padding: 12px 0;
-	line-height: 1.5em;
-}
-
-.bg_area{
-	width: 100%;
-	display: flex; 
-	flex-wrap: wrap;
-}
-
-.bg_col{
-	flex: 50%;
-	width: 50%;
-	position: relative;
-}
-
-.left_bg{
-	background-color: #ffffff;
-	position: relative;
-	margin-top: 50px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	right: 5%;
-	height: calc(100% - 50px);
-	padding: 30px 0;
-}
-
-.client_info{
-	display: block;
-	max-width: 400px;
 	margin: auto;
-	text-align: center;
+	padding: 0 25px;
 }
 
-.client_info img{
+.quoteblock .fas{
+	font-size: 45px;
+	color: #ffc91a;
+	text-align: center;
+	padding-bottom: 30px;
+}
+
+.client_box img{
 	max-width: 90px;
 	height: 90px;
 	margin: auto;
@@ -1207,105 +1059,58 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-bottom: 14px;
 }
 
-.bg_col img{
-	vertical-align: middle;
-	width: 100%;
-	height: auto;
-	transition: 0.5s;
-	overflow: hidden;
-}
-
-.client_name{
+.client_box > p{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 18px;
-	font-weight: 600;
-	display: block;
-	color: #ffc91a;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.4em;
-}
-
-.quoteblock .fas{
-	font-size: 40px;
-	color: #ffc91a;
-	text-align: center;
-	padding-bottom: 30px;
-}
-
-.client_comment{
-	display: block;
-	clear: both;
-}
-
-.client_title{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: 600;
-	display: block;
-	color: #1a2980;
-	letter-spacing: 1px;
-	text-align: center;
-	text-transform: uppercase;
-	line-height: 1.4em;
-}
-
-.client_comment p{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: normal;
+	max-width: 600px;
+	margin: auto;
 	display: block;
-	color: #696969;
+	color: #ffffff;
 	letter-spacing: 1px;
 	text-align: center;
-	max-width: 400px;
-	margin: auto;
+	padding: 0 10px;
 	line-height: 1.5em;
 }
 
-.construct_box_col .slick-slider {
+.client_box > h3{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	color: #f2f2f2;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	text-align: center;
+	display: block;
+	padding-bottom: 10px;
+}
+
+.client_box > h3::before{
+	content: '\2014';
+	padding: 0 0.5em;
+}
+
+.ratings_icon{
+	text-align: center;
 	width: 100%;
-	max-width: 750px;
 }
 
-.slidenav{
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	z-index: 9999;
-	margin-left: 15px;
-}
-
-.prev_slide,
-.next_slide{
-	font-size: 20px;
-	transition: 0.6s ease;
-	display: inline-block;
-	overflow: hidden;
-	color: #1a2980;
-	cursor: pointer;
-}
-
-.prev_slide{
-	margin-right: 20px;
-}
-
-.next_slide:hover,
-.prev_slide:hover{
+.ratings_icon .fas{
+	font-size: 13px;
 	color: #ffc91a;
 }
 
-/* --- 3.8. Construction Area Eight --- */
-.construct_area_eight{
+/* --- 3.7. Construction Area Seven --- */
+.construct_area_seven{
 	width: 100%;
-	margin: 0 0 9em;
+	margin: 0;
 	min-height: 400px;
 	padding: 6em 25px;
-	background-color: #f7f7f7;
+	background-color: #eeeeee;
 }
 
-.construct_group_eight{
-	max-width: 1280px;
+.construct_group_seven{
+	max-width: 1200px;
 	width: 100%;
 	margin: 0 auto;
 	display: flex; 
@@ -1361,7 +1166,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	position: relative;
 	bottom: 15px;
-	padding: 30px 40px;
+	padding: 30px;
 }
 
 .team_image > img{
@@ -1410,7 +1215,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	margin: auto;
 	text-align: center;
-	padding-bottom: 0;
+	padding: 15px 0;
 }
 
 .team_name{
@@ -1418,10 +1223,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 18px;
 	display: block;
 	font-weight: 600;
-	color: #111111;
+	color: #1a2980;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.4em;
+	margin-top: 0;
 }
 
 .team_title{
@@ -1429,10 +1235,89 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 15px;
 	display: block;
 	font-weight: 600;
-	color: #696969;
+	color: #ffc91a;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	text-align: center;
+}
+
+/* --- 3.8. Construction Area Eight --- */
+.construct_area_eight{
+	width: 100%;
+	min-height: 100px;
+	margin: 0 0 9em;
+	background-color: #1a2980;
+}
+
+.construct_group_eight{
+	max-width: 1400px;
+	margin: auto;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 20px;
+}
+
+.count_col{
+	flex: 25%;
+	width: 25%;
+	padding: 0 25px;
+	border-right: solid 1px #e0e0e0;
+}
+
+.count_box{
+	max-width: 350px;
+	margin: 0 auto;
+	padding: 0 25px;
+	min-height: 50px;
+	height: 100%;
+	text-align: center;
+}
+
+.count_icon{
+	float: left;
+	width: 5%;
+}
+
+.count_content{
+	float: left;
+	width: 85%;
+	padding-left: 10px;
+}
+
+.count_icon .fas,
+.count_icon .far{
+	font-size: 35px;
+	color: #ffffff;
+	text-align: center;
+	display: block;
+	transition: 0.5s;
+	margin-top: 10px;
+}
+
+.count_content h3{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: 600;
+	display: block;
+	color: #ffc91a;
+	letter-spacing: 1px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.count_content .counter{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 30px;
+	font-weight: 700;
+	display: block;
+	text-align: center;
+	color: #ffffff;
+	letter-spacing: 1px;
+}
+
+.fourth_border{
+	border-right: none;
 }
 
 /* --- 3.9. Construction Area Nine --- */
@@ -1442,14 +1327,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	min-height: 450px;
+	min-height: 400px;
 	height: 100%;
 	text-align: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 	margin-bottom: 2em;
-	padding: 6em 0;
+	padding: 5em 0;
 }
 
 .construct_area_nine::before {
@@ -1466,102 +1351,49 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .construct_group_nine{
 	position: relative;
 	z-index: 5;
-	max-width: 1280px;
+	max-width: 900px;
 	margin: auto;
 	padding: 0 25px;
 	width: 100%;
 }
 
-.count_area{
-	width: 100%;
-	display: flex; 
-	flex-wrap: wrap;
-}
-
-.count_col{
-	flex: 50%;
-	width: 50%;
-}
-
-.count_col_area{
-	padding-right: 20px;
-	max-width: 550px;
-}
-
-.count_col_area h2{
+.bg_head{
+	color: #ffffff;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 40px;
 	font-weight: 700;
 	display: block;
-	color: #ffffff;
-	text-align: left;
+	text-align: center;
+	letter-spacing: 1px;
 	line-height: 1.3em;
 	margin-top: 0;
-	letter-spacing: 1px;
 }
 
-.count_col_area p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	display: block;
-	color: #f2f2f2;
-	letter-spacing: 1px;
-	text-align: left;
-	padding: 10px 0;
-	line-height: 1.5em;
-}
-
-.count_right{
-	min-height: 400px;
-	background-color: #ffffff;
-	height: 100%;
-}
-
-.count_inner{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.count_inner_col{
-	flex: 50%;
-	width: 50%;
-	padding: 25px 0;
-}
-
-.count_inner_col .fas{
-	font-size: 35px;
-	color: #ffc91a;
-	text-align: center;
+.bg_col_button a{
+	background-color: #ffc91a;
+	width: 210px;
+	min-height: 30px;
+	margin: 30px auto 0;	
+    border: none;
+    color: #1a2980;
+    padding: 14px 18px;
+    text-decoration: none;
+    display: block;
+    font-size: 15px;
 	font-weight: 600;
-}
-
-.count_inner_col h3{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 18px;
-	font-weight: 500;
-	display: block;
-	color: #696969;
 	text-transform: uppercase;
+	font-family: 'Montserrat', Arial, sans-serif;
+    transition: 0.5s;
+    cursor: pointer;
+	border: 1px solid #ffc91a;
 	letter-spacing: 1px;
 	text-align: center;
 }
 
-.count_inner_col .counter{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 30px;
-	font-weight: 700;
-	display: block;
-	color: #1a2980;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	text-align: center;
-	padding-top: 10px;
-}
-
-.no-space{
-	padding: 0;
+.bg_col_button a:hover{
+	color: #ffffff;
+	background-color: #1a2980;
+	border-color: #1a2980;
 }
 
 /* 4. FOOTER
@@ -1719,18 +1551,24 @@ a.footer-brand img{
 /* 5. RESPONSIVE
  ----------- */
 @media only screen and (max-width: 1024px){
+	.header__content{
+		height: auto;
+	}
+	
+	.slide__content{
+		height: auto;
+	}
+	
 	.square_col{
 		flex: 100%;
 		width: 100%;
 		max-width: 600px;
-		margin: auto;
 	}
 	
 	.tool_col{
 		flex: 100%;
 		width: 100%;
 		max-width: 600px;
-		margin: auto;
 	}
 	
 	.tool_col_area{
@@ -1741,26 +1579,10 @@ a.footer-brand img{
 		padding-bottom: 40px;
 	}
 	
-	.construct_wide_col,
-	.construct_box_col{
-		flex: 100%;
-		width: 100%;
-		max-width: 700px;
-		margin: auto;
-	}
-
-	.construct_box_col{
-		margin-top: 35px;
-	}
-	
-	.wide_box p{
-		padding-bottom: 60px;
-	}
-	
 	.icon_col{
 		flex: 50%;
 		width: 50%;
-		margin-bottom: 40px;
+		margin-bottom: 30px;
 	}
 	
 	.featured_col{
@@ -1769,9 +1591,19 @@ a.footer-brand img{
 	}
 	
 	.team_col{
-		flex: 100%;
-		width: 100%;
+		flex: 50%;
+		width: 50%;
 		margin-bottom: 40px;
+	}
+	
+	.count_col{
+		flex: 50%;
+		width: 50%;
+		margin: 30px 0;
+	}
+	
+	.second_border{
+		border-right: none;
 	}
 }	
 
@@ -1867,15 +1699,8 @@ a.footer-brand img{
 		margin-bottom: 40px;
 	}
 	
-	.count_col{
-		flex: 100%;
-		width: 100%;
-		max-width: 650px;
-		margin: auto;
-	}
-	
-	.count_col_area{
-		margin-bottom: 40px;
+	.team_icon{
+		padding: 30px 15px;
 	}
 	
 	.footer_col{
@@ -1892,15 +1717,21 @@ a.footer-brand img{
 	.construct_head,
 	.square_area h2,
 	.tool_col_area h2,
-	.wide_box h2,
-	.bg_head,
-	.count_col_area h2{
+	.bg_head{
 		font-size: 30px;
 	}
 	
 	.equipment_col{
 		flex: 100%;
 		width: 100%;
+	}
+	
+	.left_space{
+		padding-left: 0;
+	}
+
+	.right_space{
+		padding-right: 0;
 	}
 	
 	.icon_col{
@@ -1913,9 +1744,19 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
-	.bg_col{
+	.team_col{
 		flex: 100%;
 		width: 100%;
+	}
+	
+	.count_col{
+		flex: 100%;
+		width: 100%;
+	}
+	
+	.first_border,
+	.third_border{
+		border-right: none;
 	}
 	
 	.footer_col{
@@ -1930,21 +1771,30 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
-	.count_inner_col{
-		flex: 100%;
-		width: 100%;
+	.square_col,
+	.tool_col_area,
+	.tool_col,
+	.grid_col,
+	.icon_col,
+	.team_col{
+		padding: 0;
 	}
 	
-	.square_col,
-	.featured_col,
-	.team_col,
-	.construct_box_col{
+	.featured_col{
 		padding-left: 0;
 		padding-right: 0;
 	}
-	
+}
+
+@media only screen and (max-width: 360px){
 	.team_icon{
 		padding: 30px 10px;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	.team_icon{
+		padding: 30px 5px;
 	}
 	
 	.team_icon .fab,
@@ -1952,22 +1802,11 @@ a.footer-brand img{
 		margin-right: 0;
 	}
 	
-	.tool_col,
-	.grid_col,
-	.icon_col{
-		padding: 0;
+	.count_icon{
+		width: 10%;
 	}
-	
-	.left_space{
-		padding-left: 0;
-	}
-	
-	.right_space{
-		padding-right: 0;
-	}
-	
-	.left_bg{
-		right: 0;
-		margin-top: 20px;
+
+	.count_content{
+		width: 90%;
 	}
 }
